@@ -37,3 +37,4 @@ Cameron Stenmark                Acknowledged
 4/16/2016   Finished registration and login - Austin
 4/16/2016   Started Agent registration - Cameron
 4/16/2016   Game Panel finished - John
+4/16/2016   File upload and basic user control for accounts - Austin
